# ultimate-cmake-skeleton

./: .cursorignore  .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/printing_goodbye_world/: CMakeLists.txt
application/printing_goodbye_world/src/: main.cpp
application/printing_hello_world/: CMakeLists.txt
applications/printing_goodbye_world/: CMakeLists.txt
applications/printing_goodbye_world/src/: main.cpp
applications/printing_hello_world/: CMakeLists.txt
applications/printing_hello_world/src/: main.cpp
cmake/: add_application_module.cmake  add_external_package.cmake  add_library_module.cmake  add_subdirectories.cmake  add_test_module.cmake  common_module_utils.cmake  convert_to_screaming_case.cmake
cmake/core/directory/: add_subdirectories.cmake  configure_subdirectory.cmake
cmake/core/string/: convert_to_uppercase_with_underscores.cmake
cmake/module/application/: add_application_module.cmake
cmake/module/common/: add_target_dependencies.cmake  get_module_project_name.cmake  set_target_compile_properties.cmake
cmake/module/test/: add_category_tests.cmake  add_test_module.cmake  add_test_suite.cmake  create_test_executable.cmake
libraries/: CMakeLists.txt
libraries/math/: CMakeLists.txt
libraries/math/include/math/: add.hpp
libraries/math/src/: add.cpp
libraries/math/test/: CMakeLists.txt
libraries/math/test/unit/: add.cpp
libraries/utils/: CMakeLists.txt
libraries/utils/applications/: CMakeLists.txt
libraries/utils/applications/printing_hello_world/: CMakeLists.txt
libraries/utils/include/utils/: print.hpp
modules/utils/: CMakeLists.txt
modules/utils/include/utils/: print.hpp
modules/utils/src/: print.cpp
modules/utils/src/msvc/: print.cpp
scripts/: CMakeLists.txt
scripts/executable/: format_code.sh
scripts/features/counter/: counter_manager.sh
scripts/features/formatter/: clang_formatter.sh
scripts/features/utils/: file_utils.sh  logger.sh
